--- a/generic/get_time/config.yaml
+++ b/generic/get_time/config.yaml
@@ -1,4 +1,5 @@
 author: System
+category: generic
 creation_date_time: '2025-02-09T23:05:21.407756'
 description: Get the current server time
 examples:
