--- a/generic/get_time/config.yaml
+++ b/generic/get_time/config.yaml
@@ -1,5 +1,6 @@
-author: System
+author: ParisNeo
 category: generic
+class_name: GetTimeFunction
 creation_date_time: '2025-02-09T23:05:21.407756'
 description: Get the current server time
 examples:
