--- a/context_updater/long_term_memory/config.yaml
+++ b/context_updater/long_term_memory/config.yaml
@@ -1,13 +1,14 @@
 author: ParisNeo
-category: generic
-class_name: GetTimeFunction
+category: context_updater
+class_name: LongTermMemoryFunction
 creation_date_time: '2025-02-09T23:05:21.407756'
-description: Get the current server time
+description: Builds a long term memory out of your discussions, if it is active, it
+  records relevant information
 examples:
 - What time is it right now?
 - Can you tell me the current time?
 last_update_date_time: '2025-02-09T23:05:21.407756'
-name: get_time
+name: long_term_memory
 parameters: {}
 returns:
   current_time:
