--- a/context_updater/build_context_update_function/config.yaml
+++ b/context_updater/build_context_update_function/config.yaml
@@ -5,6 +5,7 @@ description: A function that helps the AI build other functions by generating Py
   and YAML files.
 last_update_date_time: '2025-02-19T23:01:37.849192'
 name: build_context_update_function
+static_parameters: []
 parameters: []
 returns:
   status:
