--- a/generation/image_gen/config.yaml
+++ b/generation/image_gen/config.yaml
@@ -8,6 +8,7 @@ examples:
 - Generate an icon for a banc account application
 last_update_date_time: '2025-02-09T23:05:21.407756'
 name: image_gen
+static_parameters: []
 parameters:
 - description: the prompt to be passed to the generation app. Make sure it contains
     a detailed description of the image. Also do include a style or even an artist
