--- a/misc/word_count/config.yaml
+++ b/misc/word_count/config.yaml
@@ -1,4 +1,4 @@
-author: YourName
+author: ParisNeo
 category: text_processing
 class_name: WordCountFunction
 creation_date_time: '2023-10-15T12:00:00.000000'
@@ -8,6 +8,7 @@ examples:
 - How many words are in "Hello, world!"?
 last_update_date_time: '2023-10-15T12:00:00.000000'
 name: word_count
+static_parameters: []
 parameters:
 - description: The text to count the words in.
   name: text
