--- a/data_analysis/summarize_file/config.yaml
+++ b/data_analysis/summarize_file/config.yaml
@@ -1,4 +1,5 @@
 author: ParisNeo
+block_rag: true
 category: data_analysis
 class_name: SummarizeFile
 creation_date_time: '2025-03-09T15:11:20.296926'
@@ -7,7 +8,9 @@ description: This function reads a file and summarizes its content using sequent
 last_update_date_time: '2025-03-09T15:11:20.296926'
 name: summarize_file
 parameters:
-- description: Path to the text file to be summarized.
+- description: (Optional) Path to the file to be summarized if provided by the user.
+    If not we'll use the currently uploaded document.
+    Do not fill it if the user did not give an explicit file path
   name: file_path
   type: str
 returns:
