--- a/data_analysis/summarize_file/config.yaml
+++ b/data_analysis/summarize_file/config.yaml
@@ -9,8 +9,8 @@ last_update_date_time: '2025-03-09T15:11:20.296926'
 name: summarize_file
 parameters:
 - description: (Optional) Path to the file to be summarized if provided by the user.
-    If not we'll use the currently uploaded document.
-    Do not fill it if the user did not give an explicit file path
+    If not we'll use the currently uploaded document. Do not fill it if the user did
+    not give an explicit file path
   name: file_path
   type: str
 returns:
